--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>SevereStorms Media</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
@@ -39,11 +39,11 @@
 
     <div class="menu">
     <ul>
-     <li><a href="#">Home</a></li>
-     <li><a href="#">News</a></li>
-     <li><a href="#">Destination</a></li>
-     <li><a href="#">Contact</a></li>
-     <li><a href="#">About</a></li>
+     <li><a href="index.html">Home</a></li>
+     <li><a href="News.html">News</a></li>
+     <li><a href="Destination.html">Destination</a></li>
+     <li><a href="Contact.html">Contact</a></li>
+     <li><a href="About.html">About</a></li>
     </ul>
     </div>
     <script src="script.js"></script>
