change video background!

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="toggle"></div>
 		</header>
 
-		<video src="/video/explorer.mp4" muted loop autoplay></video>
+		<video src="/video/video.mp4" muted loop autoplay></video>
 
 		<div class="overlay"></div>
 
