--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ document.oncontextmenu=new Function("alert(message);return false")
      <li><a href="Destination.html">Destination</a></li>
      <li><a href="Contact.html">Contact</a></li>
      <li><a href="About.html">About</a></li>
+     <li><a href="WeatherAlert.html">Weather Alert</a></li>
     </ul>
     </div>
     <script src="script.js"></script>
