--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 	<title>SevereStorms Media</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" type="image/png" href="favicon.png">
@@ -74,7 +75,7 @@ document.oncontextmenu=new Function("alert(message);return false")
      <li><a href="Destination.html">Destination</a></li>
      <li><a href="Contact.html">Contact</a></li>
      <li><a href="About.html">About</a></li>
-     <li><a href="WeatherAlert.html">Weather Alert</a></li>
+     <li><a href="WeatherAlert.html">Weather Alert <i class="fas fa-exclamation-triangle"></i></a></li>
     </ul>
     </div>
     <script src="script.js"></script>
