--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
+	 crossorigin="anonymous">
 	<title>SevereStorms Media</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
-<script>
-  var message="Do Not Copy Any Code Of This Website!";
+	<script>
+		var message="Do Not Copy Any Code Of This Website!";
 
 ///////////////////////////////////
 function clickIE4(){
@@ -40,7 +41,8 @@ document.onmousedown=clickIE4;
 }
 
 document.oncontextmenu=new Function("alert(message);return false")
-</script>
+
+	</script>
 
 	<section class="showcase">
 
@@ -75,7 +77,7 @@ document.oncontextmenu=new Function("alert(message);return false")
      <li><a href="Destination.html">Destination</a></li>
      <li><a href="Contact.html">Contact</a></li>
      <li><a href="About.html">About</a></li>
-     <li><a href="WeatherAlert.html">Weather Alert <i class="fas fa-exclamation-triangle"></i></a></li>
+     <li><a id="wx" href="WeatherAlert.html">Weather Alert <i class="fas fa-exclamation-triangle"></i></a></li>
     </ul>
     </div>
     <script src="script.js"></script>
