--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ document.oncontextmenu=new Function("alert(message);return false")
 			<div class="toggle"></div>
 		</header>
 
-		<video src="/video/video.mp4" muted loop autoplay></video>
+		<video src="/video/tornado.mp4" muted loop autoplay></video>
 
 		<div class="overlay"></div>
 
