--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ document.oncontextmenu=new Function("alert(message);return false")
 	<section class="showcase">
 
 		<header>
-			<h2 class="logo">SevereStorms Media</h2>
+			<h2 class="logo">SevereStorms Media  <i class="far fa-file-code"></i></h2>
 			<div class="toggle"></div>
 		</header>
 
