--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@ document.oncontextmenu=new Function("alert(message);return false")
 	<section class="showcase">
 
 		<header>
-			<h2 class="logo">SevereStorms Media  <i class="far fa-file-code"></i></h2>
+			<h2 class="logo">SevereStorms Media</h2>
 			<div class="toggle"></div>
 		</header>
 
-		<video src="/video/tornado.mp4" muted loop autoplay></video>
+		<video src="/video/video1.mp4" muted loop autoplay></video>
 
 		<div class="overlay"></div>
 
