add console.js and index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@ document.onmousedown=clickIE4;
 }
 
 document.oncontextmenu=new Function("alert(message);return false")
-
 	</script>
 
 	<section class="showcase">
@@ -81,5 +80,6 @@ document.oncontextmenu=new Function("alert(message);return false")
     </ul>
     </div>
     <script src="script.js"></script>
+    <script src="console.js"></script>
   </body>
 </html>
