--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<script>
+	<!--<script>
 		var message="Do Not Copy Any Code Of This Website!";
 
 ///////////////////////////////////
@@ -41,7 +41,7 @@ document.onmousedown=clickIE4;
 }
 
 document.oncontextmenu=new Function("alert(message);return false")
-	</script>
+	</script>-->
 
 	<section class="showcase">
 
