--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@ document.oncontextmenu=new Function("alert(message);return false")
 		</div>
 
 		<ul class="social">
-			<li><img src="facebook.png" alt=""></li>
-       <li><img src="twitter.png" alt=""></li>
-       <li><img src="instagram.png" alt=""></li>
+			<li><i class="fab fa-facebook-square"></i></li>
+      
+       <li><i class="fab fa-twitter-square"></i></li>
+      
+       <li><i class="fab fa-instagram-square"></i></li>
       </ul>
     </section>
 
