unpublish "explore" button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ document.oncontextmenu=new Function("alert(message);return false")
 			<h2>Never Stop</h2>
 			<h3>Chasing Severe Storms</h3>
 			<p>Start Chasing Severe Weather Today!</p>
-			<a href="https://weather.gc.ca">Explore</a>
+			<!--<a href="https://weather.gc.ca">Explore</a>-->
 		</div>
 
 		<ul class="social">
