Update html files

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ document.oncontextmenu=new Function("alert(message);return false")
 			<h3>Chasing Severe Storms</h3>
 			<p>Start Chasing Severe Weather Today!</p>
 			<a href="/home/explore.html">Explore</a>
-      <a id="ls" href="livestream.html">Live Stream</a>
+      <a id="ls" href="recentwork.html">Recent Work</a>
 		</div>
 
 		<ul class="social">
