--- a/recentwork.html
+++ b/recentwork.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
 <head>
-	<title>SevereStorms Media | LiveStream</title>
+	<title>SevereStorms Media | Recent Work</title>
 	<script src="player/js/majhdwplayer.js"></script>
 	<script src="player/js/html5.hdwplayer.js"></script>
   <link rel="icon" type="image/png" href="favicon.png">
@@ -11,18 +11,10 @@
 </head>
 <body>
 
-<div id="player" class="hdwhtml5player" style="height:360px; width:640px;"></div>
+<video width="400" controls>
+  <source src="mov_bbb.mp4" type="video/mp4">
+</video>
 
-<script>
-hdwplayer({ 
-	id        : 'player',
-        swf       : 'player/player.swf', 
-        width     : '707', 
-        height    : '400' ,
-        video     : 'http://hdwplayer.com/player/videos/300.mp4',
-        autoStart : 'true'
-});
-</script>
 
 
 <script src="console.js"></script>
