--- a/index.html
+++ b/index.html
@@ -43,6 +43,41 @@ document.onmousedown=clickIE4;
 document.oncontextmenu=new Function("alert(message);return false")
 	</script>-->
 
+	<!-- 
+	<style> 
+		p, h1 { 
+			color: green; 
+		} 
+	</style> 
+	<script src= 
+"https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> 
+	</script> 
+
+	<script> 
+		/* Add "https://api.ipify.org?format=json" statement 
+		this will communicate with the ipify servers in 
+		order to retrieve the IP address $.getJSON will 
+		load JSON-encoded data from the server using a 
+		GET HTTP request */ 
+
+		$.getJSON("https://api.ipify.org?format=json", 
+										function(data) { 
+
+			// Setting text of element P with id gfg 
+			$("#gfg").html(data.ip); 
+		}) 
+	</script> 
+</head> 
+
+<body> 
+	<center> 
+		<h1>GeeksforGeeks</h1> 
+		<h3>Public IP Address of user is:</h3> 
+
+		<p id="gfg"></p> 
+
+	</center> -->
+
 	<section class="showcase">
 
 		<header>
@@ -60,7 +95,7 @@ document.oncontextmenu=new Function("alert(message);return false")
 			<h3>Chasing Severe Storms</h3>
 			<p>Start Chasing Severe Weather Today!</p>
 			<a href="/home/explore.html">Explore</a>
-      <a id="ls" href="recentwork.html">Recent Work</a>
+			<a id="ls" href="recentwork.html">Recent Work</a>
 		</div>
 
 		<ul class="social">
@@ -83,6 +118,6 @@ document.oncontextmenu=new Function("alert(message);return false")
     </ul>
     </div>
     <script src="script.js"></script>
-    <script src="console.js"></script>
+    <script src="/console/googlechrome/devtools.js"></script>
   </body>
 </html>
