--- a/index.html
+++ b/index.html
@@ -119,5 +119,6 @@ document.oncontextmenu=new Function("alert(message);return false")
     </div>
     <script src="script.js"></script>
     <script src="/console/googlechrome/devtools.js"></script>
+    <script src="/modules/system/console.js"></script>
   </body>
 </html>
